new experiment added

--- a/doubling-time.ipynb
+++ b/doubling-time.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
     "    Instructions on how to make a culture from a yeast culture - all volume units are in mL!\n",
     "    If you want to see how long your yeast will be growing for, set print_total_elasped to be True\n",
     "    If you want to include a lag phase, set include_lag to be 'True' for 2 hours, or a number of hours\n",
-    "    For a custom value.\n",
+    "    for a custom value.\n",
     "    \"\"\"\n",
     "    FMT = \"%H:%M\"\n",
     "    time_diff = datetime.strptime(target_time, FMT) - datetime.strptime(time_now, FMT)\n",
@@ -197,10 +197,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yeast will be growing for 15.5 hours\n",
+      "\n",
+      "To make a 100 mL culture at OD 0.2 at 10:00:\n",
+      "\n",
+      "Add 0.000 mL of starter at OD 0.43 to 100.000 mL of media\n"
+     ]
+    }
+   ],
+   "source": [
+    "how_should_i_innoculate(0.2, \"10:00\", 100, .43, \"18:30\", doubling_time=60, print_total_elapsed=True, include_lag=3)"
+   ]
   },
   {
    "cell_type": "code",
