added a test version of a new function that operates on dilution prediction for time elapsed rather than absolute times

--- a/doubling-time.ipynb
+++ b/doubling-time.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "80.72120130233009"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +218,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yeast will be growing for 23.0 hours\n",
+      "\n",
+      "To make a 50 mL culture at OD 0.5 at 16:00:\n",
+      "\n",
+      "Add 0.038 mL of starter at OD 0.016 to 49.962 mL of media\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def how_should_i_innoculate2(target_od, hours_elapsed, target_volume, starter_od, \\\n",
+    "                            doubling_time=90, print_total_elapsed=False, include_lag=False):\n",
+    "    \"\"\"\n",
+    "    Instructions on how to make a culture from a yeast culture - all volume units are in mL!\n",
+    "    This version of the function is if you know how long you want them to grow (in hours).\n",
+    "    \"\"\"\n",
+    "    time_diff = hours_elapsed*60\n",
+    "    number_of_doublings = time_diff / doubling_time\n",
+    "    beginning_od = target_od / (2**(number_of_doublings))\n",
+    "    volume_of_starter = (beginning_od * target_volume) / starter_od\n",
+    "    volume_of_media = target_volume - volume_of_starter\n",
+    "    print('To make a {} mL culture at OD {} ready in {} hours:\\n'.format(target_volume, target_od, hours_elapsed))\n",
+    "    print('Add {:0.3f} mL of starter at OD {} to {:0.3f} mL of media'.format(volume_of_starter,\n",
+    "                                                                             starter_od,\n",
+    "                                                                             volume_of_media))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To make a 50 mL culture at OD 0.5 ready in 42 hours:\n",
+      "\n",
+      "Add 0.495 mL of starter at OD 0.018 to 49.505 mL of media\n"
+     ]
+    }
+   ],
+   "source": [
+    "how_should_i_innoculate2(0.5, 42, 50, 0.018, doubling_time=220)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -227,9 +290,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -241,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
